Restyled layout of map and checkbox div. Fixed collapsed nav button hover not going to edge of screen.

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-/* GOOGLE MAPS */
 html, body, .container {
 	height: 100%;
 	margin: 0;
@@ -8,18 +7,53 @@ html, body, .container {
 body {
 	background-color: #FAFEFA!important;
 	font-family: "Open Sans", sans-serif!important;
-	/*color: #BCE9FE!important;*/
+}
 
+/********************
+
+		LAYOUT
+
+********************/
+
+#mapContainer {
+	width: 60%;
+	height: 400px;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
 }
 
 #map-canvas {
-	margin: 0;
-	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
-.modal-content {
-	color: black;
+#optionsContainer {
+	width: 40%;
+	float: right;
+	margin: 0;
+	padding: 0 10px;
+	text-align: right;
 }
+
+#attractionOptions {
+	width: 300px;
+	display: inline-block;	
+
+	background-color: #CCFFCF!important;
+	border-radius: 5px;
+	padding: 10px;
+	padding-left: 15px;
+	text-align: left;
+}
+
+.preferences {
+	display: inline-block;
+	vertical-align: top;
+}
+
+
+
 
 
 
@@ -35,9 +69,7 @@ body {
 **********************/
 
 .attractionFocus, .panel-title a {
-	/*color: #62C9FA!important;*/
 	color: #3B623E!important;
-	/*color: #623145!important;*/
 	
 }
 .attractionFocus:hover, .panel-title a:hover {
@@ -67,7 +99,7 @@ body {
 	color: white!important;
 }
 
-#checkinButton:hover, .mybtn:hover {
+#checkinButton:hover, .my-btn:hover {
 	background-color: #AF7B8F!important;
 }
 
@@ -105,8 +137,6 @@ ul.nav li {
 }
 
 .navbar-btn:hover {
-	/*background-color: #C9FBCC!important;*/
-	/*color: #2E343E!important;*/
 	background-color: #623145!important;
 	text-decoration: none!important;
 
@@ -118,9 +148,6 @@ ul.nav li {
 
 .navbar-toggle {
 	border: none!important;
-	/*background-color: #BCE9FE!important;*/
-	/*background-color: #BCD7FD!important;*/
-	/*background-color: white!important;*/
 }
 .icon-bar {
 	background-color: white!important;
@@ -148,10 +175,8 @@ ul.nav li {
 /*********************/
 
 .navbar {
-	/*background-color: #4EA0C7!important;*/
 	background-color: #7BAF7E!important;
 	border: none!important;
-
 }
 
 .navbar-brand {		
@@ -291,6 +316,8 @@ button.btn-arrow.disabled {
 
 .hidden {
 	display: none;
+	margin: 0;
+	padding: 0;
 }
 
 
@@ -298,6 +325,15 @@ button.btn-arrow.disabled {
 .panel-list{
 	list-style-type: none;
 	padding-left: 0;
+}
+
+.modal-header {
+	background-color: #7BAF7E;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	color: white;
 }
 
 
@@ -345,14 +381,7 @@ button.btn-arrow.disabled {
 	padding-left: 1px!important;
 }
 
-.modal-header {
-	background-color: #7BAF7E;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	color: white;
-}
+
 
 
 
@@ -368,16 +397,9 @@ button.btn-arrow.disabled {
 	padding: 0;
 }
 
-.checkbox.row {
-	/*background-color: #C9FBCC!important;*/
-	background-color: #CCFFCF!important;
-	padding: 10px;
-	padding-left: 15px;
-	margin: auto;
-}
+
 
 #checkinForm {
-	/*background-color: #C9FBCC!important;*/
 	padding: 15px;
 	margin-bottom: -10px!important;
 }
@@ -393,7 +415,7 @@ input[type="checkbox"] + label {
 	width: 15px;
 	padding: 0;
 	margin-right: 5px!important;
-	margin-left: -10px;
+	/*margin-left: -10px;*/
 	/*vertical-align: middle;*/
 	/*cursor: pointer;*/
 }
@@ -422,14 +444,73 @@ input[type="checkbox"]:checked + label span.check-glyph {
 	font-size: 9pt!important;
 }
 
-#savePreferences {
-	margin-left: -18px!important;
-	margin-bottom: 10px;
+
+
+
+/****************************
+
+		MEDIA QUERIES
+
+****************************/
+
+
+@media all and (max-width: 768px) {
+	/* GOOGLE MAPS */
+
+	#mapContainer {
+		width: 100%;
+	}
+	#optionsContainer {
+		width: 100%;
+		padding: 10px 0;
+	}
+	#attractionOptions {
+		width: 100%;
+	}
+	.preferences {
+		float: left;
+	}
+	#foodTrucks {
+		padding-right: 25px;
+		width: 180px;
+	}
+	#displayOptions {
+		width: 265px;
+	}
+	#collapsedNav {
+		padding: 0;
+	}
+	ul.nav li {
+		padding-left: 0;
+	}
+	.navbar-btn.btn-link {
+		width: 100%;
+	}
+	#savePreferences {
+	float: right;
+	}
+
 }
 
+@media all and (max-width: 505px) {
+	#foodTrucks, #displayOptions {
+		width: 100%;
+	}
+}
 
-
-
+@media all and (min-width: 1200px) {
+	#mapContainer {
+		width: 70%;
+	}
+	#optionsContainer {
+		width: 30%;
+		margin-right: 0;
+		padding-right: 0;
+	}
+	#attractionOptions {
+		/*text-align: left;*/
+	}
+}
 
 
 
